# photo-qa

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  TASKS.md  justfile  lefthook.yml
.claude/: models.md
.claude/feedback/: check-command-impl-review-2026-02-01.md  check-command-review-2026-02-01-02.md  check-command-review-2026-02-01.md  cli-check-command-review-2026-02-01.md  config-layering-review-2026-02-01.md  eyes-module-review-2026-02-01.md  testing-infrastructure-review-2026-02-01.md
.github/workflows/: ci.yml  release.yml
crates/photo-qa-adapters/: Cargo.toml
crates/photo-qa-adapters/src/: fs.rs  lib.rs  models.rs
crates/photo-qa-adapters/tests/: raster_loading.rs  raw_loading.rs
crates/photo-qa-adapters/tests/fixtures/: test.tiff
crates/photo-qa-cli/: Cargo.toml
crates/photo-qa-cli/src/: config.rs  main.rs
crates/photo-qa-cli/src/commands/: check.rs  mod.rs  models.rs
crates/photo-qa-cli/src/output/: json.rs  mod.rs  progress.rs
crates/photo-qa-cli/tests/: accuracy.rs  cli_args.rs  config_layering.rs  output_format.rs  pipeline.rs
crates/photo-qa-core/: Cargo.toml
crates/photo-qa-core/src/: lib.rs
crates/photo-qa-core/src/domain/: issue.rs  mod.rs  qa_module.rs  result.rs
crates/photo-qa-core/src/inference/: blazeface.rs  device.rs  eye_state.rs  loader.rs  mod.rs  utils.rs
crates/photo-qa-core/src/modules/: blur.rs  exposure.rs  eyes.rs  mod.rs
crates/photo-qa-core/src/ports/: image_source.rs  mod.rs  progress.rs  result_output.rs
crates/photo-qa-test-support/: Cargo.toml
crates/photo-qa-test-support/src/: builders.rs  lib.rs  mocks.rs
scripts/: fetch-test-data.sh
scripts/models/: .gitignore  README.md  convert_blazeface.py  convert_blazeface_hollance.py  convert_eye_state.py  convert_u2net.py  release.sh  requirements.txt  verify_models.py
