[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/cwygoda/photo-qa"
authors = ["Christian Wygoda"]

[workspace.dependencies]
# Core
thiserror = "1.0"
anyhow = "1.0"

# Async/channels
tokio = { version = "1.0", features = ["sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Image processing
image = "0.25"
rawloader = "0.37"
kamadak-exif = "0.5"

# ML inference
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
safetensors = "0.4"

# Utilities
once_cell = "1.20"
time = { version = "0.3", features = ["formatting"] }
dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"

# Internal crates
photo-qa-core = { path = "crates/photo-qa-core" }
photo-qa-adapters = { path = "crates/photo-qa-adapters" }
photo-qa-test-support = { path = "crates/photo-qa-test-support" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
