[package]
name = "photo-qa"
description = "CLI tool for automated photo quality assessment"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "photo-qa"
path = "src/main.rs"

[dependencies]
photo-qa-core.workspace = true
photo-qa-adapters.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[lints]
workspace = true
